# rust-api-service

./: Cargo.toml
docker/: docker-compose.yml
src/: main.rs
src/data/: mod.rs
src/handlers/: mod.rs
src/my_kafka/: mod.rs
